# QA_GURU_BELEVTSEVA_HW_17

./: README.md  pyproject.toml
Poetry/: pyproject.toml
Poetry/api/: schemas.py
Poetry/tests/: test_products_api.py  test_schemas.py
api/: schemas.py
tests/: test_products_api.py  test_schemas.py
