[tool.poetry]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = ["darya"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
selenium = "4.36.0"
selene = "2.0.0rc9"
pytest = "8.4.2"
jsonschema = "^4.25.1"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

